fixed width problem when someone types text with which overflow

--- a/style.css
+++ b/style.css
@@ -2,10 +2,11 @@
 .toggle-warpper{
   margin-left: 2px;
   margin-right:2px;
-  width: 55px;
+  width: 70px;
     height: 24px;
     margin-top:2px;
     border-radius: 3px;
+    overflow: hidden;
     padding: 0;
     border: 0;
     cursor: pointer;
@@ -34,10 +35,15 @@
 }
 .toggle-on{
     opacity: 1;
-    padding-left:2px;
+    max-width:45px;
+    overflow: hidden;
+    padding-left:4px;
 }
 .toggle-off{
     opacity: 1;
+    max-width:45px;
+    padding-left:1px;
+    overflow: hidden;
     left:25px;
 
 }
@@ -53,5 +59,5 @@
   transition: left .25s ease;
 }
  .toggle-selector-on{
-   left:33px !important;
+   left:calc(100% - 20px);
  }
